<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnSearch"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.MainActivity">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20_dp"
                android:layout_marginTop="80dp"
                android:text="@string/hows_the_weather_looking"
                android:textColor="@color/primary_color"
                android:textSize="40sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etSearchLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHeader"
                android:layout_marginHorizontal="@dimen/dp_20_dp"
                android:layout_marginTop="@dimen/dp_30_dp"
                android:layout_marginBottom="@dimen/dp_12_dp"
                android:background="@drawable/round_bg"
                android:elevation="@dimen/dp_3_dp"
                android:hint="@string/type_your_address"
                android:padding="@dimen/dp_16_dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14_sp" />

            <LinearLayout
                android:id="@+id/llRecentSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etSearchLocation"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_20_dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/recent_searches"
                    android:textColor="#50000000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRecentSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_20_dp"
                    android:layout_marginTop="@dimen/dp_10_dp"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_search" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvCurrentLocation"
        android:layout_marginHorizontal="@dimen/dp_20_dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="@dimen/dp_30_dp"
        android:background="@drawable/round_bg"
        android:backgroundTint="@color/primary_color"
        android:elevation="@dimen/dp_5_dp"
        android:paddingVertical="@dimen/dp_16_dp"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18_sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="@dimen/dp_40_dp"
        android:text="@string/or_use_my_current_location"
        android:textColor="@color/primary_color"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>
